Add react, add css loader

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,13 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root">amp</div>
-
-    <button onclick="decreaseGain()">Gain-</button>
-    <button onclick="increaseGain()">Gain+</button>
-    <button onclick="decreaseFrequency()">Freq-</button>
-    <button onclick="increaseFrequency()">Freq+</button>
-    <button onclick="buttonClick()">start</button>
-    <script src="index.js"></script>
+    <div id="root"></div>
   </body>
 </html>
